Changelog
=========

1.4.0
-----

Supported geoLink schema versions: v1.0.0, v1.1.0, v1.1.1 (default)

- Add test for arbitrary URL parameters
- Add enumeration value "Bezirk" for attribute "federal_level"


1.3.2
-----

Supported geoLink schema versions: v1.0.0, v1.1.0, v1.1.1 (default)

- Move repository to GitHub openoereb
- Use defusedxml for XML parsing
- Drop support for Python 3.4


1.3.1
-----

Supported geoLink schema versions: v1.0.0, v1.1.0, v1.1.1 (default)

- Add support for geoLink schema version 1.1.1


1.3.0
-----

Supported geoLink schema versions: v1.0.0, v1.1.0 (default)

- Add support for multiple geoLink schema versions


1.2.0
-----

Supported geoLink schema versions: 20171108 (v1.1.0)

- Use new geoLink schema


1.1.2
-----

Supported geoLink schema version: 20170214 (v1.0.0)

- All attributes are optional, as defined in the schema


1.1.1
-----

Supported geoLink schema version: 20170214 (v1.0.0)

- Allow documents with empty file list


1.1.0
-----

Supported geoLink schema version: 20170214 (v1.0.0)

- Add support for Python 3


1.0.0
-----

Supported geoLink schema version: 20170214 (v1.0.0)

- Initial version