@@ -6,7 +6,7 @@ def test_format_with_file(documents):
     formatter = HTML()
     html = formatter.format(documents)
     assert html == '<ul class="geolink-formatter">' \
-                   '<li class="geolink-formatter-document">Document with file (15.01.2017)' \
+                   '<li class="geolink-formatter-document">Document with file (15.01.2017) ' \
                    '<ul class="geolink-formatter">' \
                    '<li class="geolink-formatter-file">' \
                    '<a href="http://www.example.com/test.pdf" target="_blank">Test file</a>' \
@@ -20,6 +20,16 @@ def test_format_without_file(document_without_file):
     formatter = HTML()
     html = formatter.format(document_without_file)
     assert html == '<ul class="geolink-formatter">' \
-                   '<li class="geolink-formatter-document">Document without file (15.01.2017)' \
+                   '<li class="geolink-formatter-document">Document without file (15.01.2017) ' \
+                   '</li>' \
+                   '</ul>'
+
+
+def test_format_archived(document_archived):
+    formatter = HTML()
+    html = formatter.format(document_archived)
+    assert html == '<ul class="geolink-formatter">' \
+                   '<li class="geolink-formatter-document">' \
+                   '<strike>Archived document (15.01.2017)</strike> (01.01.2019)' \
                    '</li>' \
                    '</ul>'
