@@ -145,7 +145,6 @@ def test_xml_from_url(mock_request):
         assert len(documents) == 4
         assert len(documents[0].files) == 5
         assert documents[0].decree_date.strftime(fmt) == '2001-03-15'
-        assert documents[0].abrogation_date.strftime(fmt) == '2008-12-31'
 
 
 def test_wrong_schema_version(mock_request):
@@ -174,14 +173,13 @@ def test_schema_version_1_1_0():
 
 
 def test_schema_version_1_1_1():
-    fmt = '%Y-%m-%d'
     with requests_mock.mock() as m:
         with open('tests/resources/geolink_v1.1.1.xml', 'rb') as f:
             m.get('http://oereblex.test.com/api/geolinks/1500.xml', content=f.read())
         documents = XML(version=SCHEMA.V1_1_1).from_url('http://oereblex.test.com/api/geolinks/1500.xml')
     assert documents[0].number == '1A'
     assert documents[0].abbreviation == 'abbr'
-    assert documents[0].abrogation_date.strftime(fmt) == '2008-12-31'
+    assert documents[0].abrogation_date is None
 
 
 def test_schema_version_1_1_1_with_bezirk():
@@ -197,14 +195,12 @@ def test_schema_version_1_1_1_with_bezirk():
 
 
 def test_default_version_with_locale():
-    fmt = '%Y-%m-%d'
     with requests_mock.mock() as m:
         with open('tests/resources/geolink_v1.1.1.xml', 'rb') as f:
             m.get('http://oereblex.test.com/api/geolinks/1500.xml?locale=fr', content=f.read())
         documents = XML().from_url('http://oereblex.test.com/api/geolinks/1500.xml', {'locale': 'fr'})
     assert documents[0].number == '1A'
     assert documents[0].abbreviation == 'abbr'
-    assert documents[0].abrogation_date.strftime(fmt) == '2008-12-31'
 
 
 def test_dtd_validation_valid():
